# mlx-arsenal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
mlx_arsenal/: __init__.py
mlx_arsenal/attention/: __init__.py  masks.py
mlx_arsenal/conv/: __init__.py  weight_norm.py
mlx_arsenal/diffusion/: __init__.py  samplers.py  schedulers.py  teacache.py  timestep.py
mlx_arsenal/encoding/: __init__.py  fourier.py
mlx_arsenal/layout/: __init__.py  channels.py  weights.py
mlx_arsenal/moe/: moe.py
mlx_arsenal/norm/: __init__.py  pixel_norm.py
mlx_arsenal/rasterize/: __init__.py  interpolate.py  rasterize.py
mlx_arsenal/spatial/: __init__.py  interpolate.py  patch.py  pixel_shuffle.py  upsample.py
mlx_arsenal/tiling/: __init__.py  spatial.py  temporal.py
mlx_ops/: __init__.py
mlx_ops/attention/: __init__.py  rope.py  sdpa.py
mlx_ops/conv/: __init__.py  causal.py
mlx_ops/diffusion/: __init__.py  flow_matching.py  resnet_block.py  timestep_embed.py
mlx_ops/layout/: __init__.py
mlx_ops/moe/: __init__.py  moe.py
mlx_ops/norm/: __init__.py  ada_layer_norm.py
mlx_ops/spatial/: __init__.py  pad.py  pixel_shuffle.py
mlx_ops/tiling/: __init__.py
tests/: test_attention.py  test_conv.py  test_diffusion.py  test_encoding.py  test_interpolate.py  test_layout.py  test_moe.py  test_norm.py  test_rasterize.py  test_spatial.py  test_teacache.py  test_tiling.py
