[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-arsenal"
version = "0.2.3"
description = "Reusable mid-level building blocks for MLX — the missing layer between mlx.nn and full model implementations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "dgrauet" }]
keywords = ["mlx", "apple-silicon", "deep-learning", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.27.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "einops>=0.8.2",
    "ruff>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/dgrauet/mlx-arsenal"
Repository = "https://github.com/dgrauet/mlx-arsenal"
Issues = "https://github.com/dgrauet/mlx-arsenal/issues"

[tool.setuptools.packages.find]
include = ["mlx_arsenal*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# N806: tensor dims (B, C, H, W, T) are idiomatic uppercase in ML code.
ignore = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
